--- a/SampleApplication/build.gradle
+++ b/SampleApplication/build.gradle
@@ -22,6 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':Library')
+    compile project(':pulsator4droid')
     compile 'com.android.support:appcompat-v7:24.0.0'
 }
