--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: android
-sudo: false
 android:
   components:
+    - tools
     - build-tools-24.0.0
     - extra-android-support
     - extra-android-m2repository
     - android-24
   licenses:
-    - '.+'
+    - 'android-sdk-license-.+'
