--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ android:
     - android-24
   licenses:
     - 'android-sdk-license-.+'
+before_install:
+  - echo "bintray.user=dummy_user" > local.properties
+  - echo "bintray.apikey=dummy_api_key" >> local.properties
+  - echo "bintray.gpg.password=dummy_password" >> local.properties
