--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ before_install:
   - echo "bintray.user=dummy_user" > local.properties
   - echo "bintray.apikey=dummy_api_key" >> local.properties
   - echo "bintray.gpg.password=dummy_password" >> local.properties
+script: ./gradlew clean build
